

                              KijiSchema Release Notes

Version 1.6.0
  * SCHEMA-875. Revert binary incompatibility introduced in SCHEMA-826.
  * POM-40. Require JDK 7 to compile Kiji projects.
  * SCHEMA-851. Deprecate CellSpec table reader overrides; fix hashCode & equality
      of KijiDataRequest; cleanups to CellDecoderProvider.
  * SCHEMA-695. Rebase and merge all Cassandra code onto master.

Version 1.5.0
  * SCHEMA-828. Remove finalization in favor of DebugResourceTracker.
  * SCHEMA-826. Make KijiURI, KijiInstaller, and KijiFactory generic to the
      underlying database.
  * SCHEMA-823. Add Kiji Services tool.
  * SCHEMA-775. Refactor KijiColumnNameTranslator/HBaseColumnName/LayoutCapsule

Version 1.4.3
  * SCHEMA-813. Split ZooKeeperFactory out of HBaseFactory, remove LocalLock,
      reference track Curator ZK connections

Version 1.4.2
  * SCHEMA-802. Log warning when uninstalling instances and deleting tables
      with registered users
  * SCHEMA-776. Enable bridge support for CDH 4.6

Version 1.4.1
  * SCHEMA-741. Integration tests now clean up dummy instances when using an
      external HBase.
  * SCHEMA-678. If HADOOP_HOME, HBASE_HOME, or JAVA_HOME are not set the kiji
      script will attempt to resolve those environment variables by
      utilizing the corresponding binary.

Version 1.4.0
  * SCHEMA-675. Adds support for configuration of Kiji column name translation.
  * SCHEMA-687. DebugResourceTracker no longer accepts null error messages.
  * SCHEMA-672. DecodedCell and KijiCell now support getting the reader Schema
      with which the cell was decoded (if any). Decoded cell adds a constructor
      which accepts a writer schema, reader schema, and value.
  * SCHEMA-648. Adds support for CDH5 and HBase 96 and updates platform bridge
      API to be compatible. Due to the remove of client-exposed row locks,
      deleteMapFamily will no longer hold a lock while deleting qualifiers.

Version 1.3.7